--- a/code/Blazora/Blazora.csproj
+++ b/code/Blazora/Blazora.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <Folder Include="script\" />
     <Folder Include="wwwroot\images\" />
+    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
   <ItemGroup>
